@@ -1,5 +1,6 @@
 1.6.8 RC3
 ---
+- new versions of ilReadRLE8Bmp, ilReadRLE4Bmp from Björn Ganster
 - applied submitted patch #1645286. patch for reading X offset and Y offset from TIFF files.
 - fixed lump reading bug. from Bjürn Ganster
 - Fixed gif loading patched from Bjürn Ganster
